# model_complex

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  calibration.py  pyproject.toml  real_epid_wave.csv  sample_data.csv  test.ipynb  test.py
data/chelyabinsk/: cases.xlsx  pcr.xlsx  ~$cases.xlsx
data/samara/: cases.xlsx  pcr.xlsx
data/samara_day/: cases.xlsx  pcr.xlsx
data/spb/: cases.xlsx  epid_data.xlsx  pcr.xlsx
epid_data/: data_preparation.py  epid_data_spb.xlsx
epid_data/spb/: .~lock.epid_data.xlsx#
examples/: br_total_calibration.ipynb
model_complex/: __init__.py  __main__.py  calibration.ipynb  main.py
model_complex/calibration/: Calibration.py  Forecast.py  __init__.py
model_complex/calibration/Algorithms/: ABC.py  Annealing.py  MCMC.py  Optuna.py  __init__.py
model_complex/calibration/epid_data/: epid_data.py
model_complex/compartmental_models/calibration/: Calibration.py  Forecast.py
model_complex/compartmental_models/epid_data/: chelyabinsk_wave_2022-2023_strain_A(H1)pdm09.csv  epid_data.ipynb  epid_data.py  samara_wave_2023-2024_strain_A(H3).csv
model_complex/compartmental_models/models/: FactoryModel.py  __init__.py
model_complex/epid_data/: __init__.py  data_preparation.py  epid_data.ipynb  epid_data.py  influenza_data.py
model_complex/model_calibration/: Calibration.py
model_complex/model_calibration/data_extraction/: data_extraction.py
model_complex/models/: BR_model.py  FactoryBRModel.py  FactoryModel.py  SEIR_model.py  __init__.py
model_complex/models/Interface/: BRModel.py  Model.py  __init__.py
model_complex/models/Models/: StrainBRModel.py  (+3 more)
model_complex/utils/: ModelParams.py  __init__.py
models/: BR_model.py
plot_module/: __init__.py
plot_module/calibration/: __init__.py  calibration.py
plot_module/epid_results/: __init__.py  prevalence.py  recovered.py
plot_module/forecast/: __init__.py  forecast.py
plot_module/interval_estimation/: __init__.py  interval_estimation.py
(+10 files in other folders)
