[tool.poetry]
name = "model-complex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openpyxl = "^3.1.5"
numpy = ">=1.17.0,<2"
pymc = "5.9.1"
ipywidgets = "^8.1.5"
numpyro = "^0.15.3"
blackjax = "^1.2.4"
nutpie = "^0.13.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
optuna = "^4.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
