[tool.poetry]
name = "model-complex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
optuna = "^4.1.0"
pandas = "^2.2.3"
pymc = "^5.18.2"
scikit-learn = "^1.5.2"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
pre-commit = "^4.1.0"
requests = "^2.32.3"
chardet = "^5.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
isort = "^5.13.2"
black = "^24.10.0"
ipywidgets = "^8.1.5"
pre-commit = "^4.0.1"

[tool.black]
line-length = 90
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
line_length = 90
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
